# Copyright: (C) 2015  iCub Facility, Istituto Italiano di Tecnologia
# Authors: Daniele E. Domenichelli <daniele.domenichelli@iit.it>
# CopyPolicy: Released under the terms of the LGPLv2.1 or later, see LGPL.TXT

add_subdirectory(yarpmanager)
add_subdirectory(yarpdataplayer)
# add_subdirectory(icons)
